--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,9 @@
 	
 	<build>
 		<sourceDirectory>main/java</sourceDirectory>
+		<resources><resource>
+			<directory>main/resource</directory>
+		</resource></resources>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -27,7 +30,6 @@
 					<target>1.8</target>
 				</configuration>
 			</plugin>
-			
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-source-plugin</artifactId>
@@ -36,6 +38,21 @@
 					<id>attach-sources</id>
 					<goals><goal>jar-no-fork</goal></goals>
 				</execution></executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-antrun-plugin</artifactId>
+	  			<version>1.8</version>
+	  			<executions>
+	  				<execution>
+	  					<id>property-signature</id>
+	  					<phase>validate</phase>
+	  					<goals><goal>run</goal></goals>
+	  					<configuration>
+	  						<tasks><ant antfile="property-signature.xml"></ant></tasks>
+	  					</configuration>
+	  				</execution>
+	  			</executions>
 			</plugin>
 		</plugins>
 	</build>
